IMGUI-update && instal new IMGUI

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    jcenter()
+
     mavenCentral()
 }
 
@@ -17,18 +17,12 @@ repositories {
 
 project.ext.lwjglVersion = "3.2.3"
 project.ext.jomlVersion = "1.9.23"
-project.ext.imguiVersion="1.76-0.9"
+
 project.ext.lwjglNatives = "natives-windows"
 
 dependencies {
-    implementation "io.imgui.java:binding:$imguiVersion"
-    implementation "io.imgui.java:lwjgl3:$imguiVersion"
 
-    // Include all available natives, but it's likely that you want something specific
-    runtimeOnly "io.imgui.java:natives-windows:$imguiVersion"
-    runtimeOnly "io.imgui.java:natives-windows-x86:$imguiVersion"
-    runtimeOnly "io.imgui.java:natives-linux:$imguiVersion"
-    runtimeOnly "io.imgui.java:natives-linux-x86:$imguiVersion"
+    implementation fileTree("libs"){include '*.jar'}
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
     implementation "org.lwjgl:lwjgl"
